samples/_failures_safe/1761147583_c4434c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77828f1b.c: In function ‘main’:
./samples/SAFE/__tmp_77828f1b.c:154:5: error: expected declaration or statement at end of input
  154 |     sort_words_by_frequency(unique_words, unique_count);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
